--- a/index.html
+++ b/index.html
@@ -1,35 +1,99 @@
 智能带看房源详情表.html
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>智能带看房源详情表</title>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: 'PingFang SC', 'Microsoft YaHei', Arial, sans-serif;
+        bottom: 0;
+        left: 25%;
+        width: 50%;
+        height: 3px;
+        background: rgba(255,255,255,0.3);
+        border-radius: 2px;
     }
 
-    body {
-        background: linear-gradient(135deg, #f0f4f8 0%, #f8fafc 100%);
-        color: #475569;
-        padding: 10px;
-        line-height: 1.5;
-        min-height: 100vh;
-    }
-
-    .container {
-        max-width: 1300px;
-        margin: 0 auto;
-        background: white;
-        border-radius: 12px;
-        border: 1px solid #e2e8f0;
-        padding: 15px;
-    }
-
-    header {
+    .system-tip {
+        font-size: 13px;
+        margin-top: 10px;
         text-align: center;
+        background: rgba(255,255,255,0.1);
+        padding: 5px 12px;
+        border-radius: 12px;
+        display: inline-block;
+    }
+
+    .form-container {
+        background: #f8fafc;
+        padding: 15px;
+        border-radius: 8px;
+        border: 1px solid #e2e8f0;
+        margin-bottom: 20px;
+    }
+
+    /* 紧凑的表单布局 - 基础信息两列 */
+    .form-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        gap: 10px;
+    }
+
+    /* 分组布局 */
+    .form-section {
+        margin-bottom: 15px;
+        padding: 12px;
+        background: white;
+        border-radius: 6px;
+        border: 1px solid #e2e8f0;
+    }
+
+    .section-title {
+        font-size: 14px;
+        font-weight: 600;
+        color: #64748b;
+        margin-bottom: 10px;
+        padding-bottom: 5px;
+        border-bottom: 1px solid #e2e8f0;
+    }
+
+    .form-group {
+        margin-bottom: 10px;
+        position: relative;
+    }
+
+    .form-group label {
+        display: block;
+        margin-bottom: 4px;
+        font-weight: 600;
+        color: #475569;
+        font-size: 12px;
+    }
+
+    .form-group input, .form-group select {
+        width: 100%;
+        padding: 8px;
+        border: 1px solid #cbd5e1;
+        border-radius: 4px;
+        font-size: 13px;
+        background-color: white;
+        transition: all 0.2s;
+    }
+
+    .form-group input:focus, .form-group select:focus {
+        outline: none;
+        border-color: #94a3b8;
+        box-shadow: 0 0 0 1px rgba(100, 116, 139, 0.2);
+    }
+
+    .form-group small {
+        color: #94a3b8;
+        font-size: 10px;
+    }
+
+    /* 按钮布局 */
+    .button-group {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 15px;
+    }
+
+    .btn {
+        width: 100%;
+        padding: 12px 16px;
+        border: none;
 </html>
